@@ -4,6 +4,7 @@
    resulted in long waiting times
  - fix: avoid pyqtgraph error messages in pipeline plots by disabling
    hovering events (not used anyway)
+ - fix: plot export did not work for single plots
 2.1.4
  - enh: add busy cursors wherever it seems fitting
  - setup: bump dclab from 0.24.7 to 0.26.1 (volume-deformation
